syntax = "proto3";

service datamover {
	rpc Runjob(RunJobRequest) returns (RunJobResponse) {}
}

message KV {
	string key = 1;
	string value = 2;
}

message Filter {
	string prefix = 1;
	repeated KV tag = 2;
}

message Connector {
	string Type = 1; //opensds,aws,azure,hwcloud,etc.
	string BucketName = 2;
	repeated KV ConnConfig = 3;
}

message AsistInfo {
	string type = 1;
	repeated KV details = 2;
}

message RunJobRequest{
	string id = 1;
	Connector sourceConn = 2;
	Connector destConn = 3;
	Filter filt = 4;
	bool remainSource = 5;
	AsistInfo asist = 6;
}

message RunJobResponse {
	string err = 1;
}